datas had placed

--- a/NewsApp/Views/Home Page/HomePage.storyboard
+++ b/NewsApp/Views/Home Page/HomePage.storyboard
@@ -19,12 +19,16 @@
                         <subviews>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="3wZ-jc-a2w">
                                 <rect key="frame" x="0.0" y="103" width="393" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="BeV-Th-gAV"/>
+                                    <constraint firstAttribute="width" constant="393" id="gfG-gF-DQJ"/>
+                                </constraints>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <outlet property="delegate" destination="Y6W-OH-hqX" id="xy9-1m-h9j"/>
                                 </connections>
                             </searchBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="News" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8d4-JI-Jr2">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Latest news from US" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8d4-JI-Jr2">
                                 <rect key="frame" x="10" y="169" width="373" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="Tuf-u9-FOI"/>
@@ -42,13 +46,59 @@
                                     <constraint firstAttribute="height" constant="639" id="tEh-SX-ray"/>
                                 </constraints>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="newsCell" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="newsCell" id="pfs-i4-2Uq">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="newsCell" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="newsCell" id="pfs-i4-2Uq" customClass="NewsTableViewCell" customModule="NewsApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pfs-i4-2Uq" id="C1R-K3-8UA">
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dHB-18-pzW">
+                                                    <rect key="frame" x="0.0" y="0.0" width="160" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="160" id="Buu-P4-jnv"/>
+                                                        <constraint firstAttribute="height" constant="100" id="q9D-3q-d9n"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WRt-rm-edZ">
+                                                    <rect key="frame" x="170" y="40" width="218" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="218" id="2wP-Ap-zyE"/>
+                                                        <constraint firstAttribute="height" constant="44" id="eSp-pT-25h"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OCa-da-XiO">
+                                                    <rect key="frame" x="170" y="5" width="218" height="25"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="25" id="Rrq-lo-3ET"/>
+                                                        <constraint firstAttribute="width" constant="218" id="eMa-fj-Wgj"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="WRt-rm-edZ" secondAttribute="trailing" constant="-15" id="1jB-sb-qVi"/>
+                                                <constraint firstItem="WRt-rm-edZ" firstAttribute="top" secondItem="OCa-da-XiO" secondAttribute="bottom" constant="10" id="RY8-j1-ruv"/>
+                                                <constraint firstItem="OCa-da-XiO" firstAttribute="leading" secondItem="dHB-18-pzW" secondAttribute="trailing" constant="10" id="Z1w-jf-XIh"/>
+                                                <constraint firstItem="WRt-rm-edZ" firstAttribute="leading" secondItem="dHB-18-pzW" secondAttribute="trailing" constant="10" id="b7Q-qk-GDN"/>
+                                                <constraint firstAttribute="bottom" secondItem="dHB-18-pzW" secondAttribute="bottom" id="dOQ-CA-MD0"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="WRt-rm-edZ" secondAttribute="bottom" constant="5" id="e1H-ys-g3D"/>
+                                                <constraint firstItem="dHB-18-pzW" firstAttribute="top" secondItem="C1R-K3-8UA" secondAttribute="top" id="pzg-bM-jcg"/>
+                                                <constraint firstAttribute="trailing" secondItem="OCa-da-XiO" secondAttribute="trailing" constant="5" id="rdv-eM-Ngd"/>
+                                                <constraint firstItem="dHB-18-pzW" firstAttribute="leading" secondItem="C1R-K3-8UA" secondAttribute="leading" id="vkK-EB-Bpg"/>
+                                                <constraint firstItem="OCa-da-XiO" firstAttribute="top" secondItem="C1R-K3-8UA" secondAttribute="top" constant="5" id="ygN-IX-bZi"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="contentLabel" destination="WRt-rm-edZ" id="fme-te-2nm"/>
+                                            <outlet property="newsImage" destination="dHB-18-pzW" id="Z1b-6g-ccB"/>
+                                            <outlet property="titleLabel" destination="OCa-da-XiO" id="jWT-ZD-FU7"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -59,15 +109,24 @@
                             <constraint firstItem="3wZ-jc-a2w" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="6c5-6E-1CU"/>
                             <constraint firstItem="Clu-mP-xVB" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Ap2-fS-RmH"/>
                             <constraint firstItem="3wZ-jc-a2w" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="DdM-Iq-wqT"/>
+                            <constraint firstItem="3wZ-jc-a2w" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="FZZ-dN-AJq"/>
                             <constraint firstItem="Clu-mP-xVB" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="IBb-gZ-3Ik"/>
+                            <constraint firstItem="8d4-JI-Jr2" firstAttribute="top" secondItem="3wZ-jc-a2w" secondAttribute="bottom" constant="10" id="L2E-NA-t7K"/>
                             <constraint firstItem="8d4-JI-Jr2" firstAttribute="top" secondItem="3wZ-jc-a2w" secondAttribute="bottom" constant="10" id="MSf-Jm-YcU"/>
                             <constraint firstAttribute="bottom" secondItem="Clu-mP-xVB" secondAttribute="bottom" id="Soi-O2-WoI"/>
                             <constraint firstItem="3wZ-jc-a2w" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="hd4-lx-5dJ"/>
                             <constraint firstItem="8d4-JI-Jr2" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="10" id="mqi-B9-wfC"/>
+                            <constraint firstItem="3wZ-jc-a2w" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="rSD-E6-2w7"/>
                             <constraint firstItem="8d4-JI-Jr2" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="v8i-qs-JYV"/>
+                            <constraint firstItem="3wZ-jc-a2w" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="xrZ-15-A6X"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="4Ip-Qn-oEe"/>
+                    <connections>
+                        <outlet property="newsLabel" destination="8d4-JI-Jr2" id="Syq-M3-7Oi"/>
+                        <outlet property="newsTableView" destination="Clu-mP-xVB" id="c48-7C-8uz"/>
+                        <outlet property="searchBar" destination="3wZ-jc-a2w" id="BRa-54-KGo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
